fixed nav button colors on mobile

--- a/src/Styles/homepage-styles.css
+++ b/src/Styles/homepage-styles.css
@@ -3,7 +3,7 @@ body{
 }
 
 .homepage-container{
-    margin-top: 20px;
+    /* margin-top: 20px; */
 }
 
 .home-text{
