--- a/src/styles/footer-styles.css
+++ b/src/styles/footer-styles.css
@@ -3,7 +3,7 @@
   left: 0;
   bottom: 0;
   width: 100%;
-  background-color: var(--green-elements);
+  background-color: var(--gray-elements);
   color: black;
   font-size: 8px;
   font-weight: 800;
